--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header id="topnav"
     <div class="topnav">
         <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#jokes">Jokes</a>
-        <a href="#weather">Weather</a>
-        <a href="#Music">Music</a>
-        <a href="#Horoscope">Horoscope</a>
+        <a href="https://www.abc.net.au/news/">News</a>
+<a href="https://www.bing.com/ck/a?!&&p=5259c959e8e76e55eab28190e27a105f6a204ccb6ad65912731c8d4c4dae64afJmltdHM9MTY1NDI3MDcyNCZpZ3VpZD02MzkzYzQ0Yy1iNTBlLTQ1ZDYtYmI5Yy05YjA2OTYxMDg1ZmQmaW5zaWQ9NTE3MQ&ptn=3&fclid=400b3168-e353-11ec-852d-67363b390d0d&u=a1aHR0cHM6Ly93d3cuc2tpcHRvbXlsb3Uub3JnL2Z1bm55LWpva2VzLw&ntb=1">Jokes</a>
+        <a href="https://www.bing.com/ck/a?!&&p=e82bfb60e69ad8c2ef1355a7c38a35ee2bd620fb5965893a406bdbd8f164ed1fJmltdHM9MTY1NDI3MDYxMSZpZ3VpZD1hOTkwYWUyMC04MGJjLTQxZWUtODcyOS0xNjhmN2RmYWFhYWUmaW5zaWQ9NTE5Ng&ptn=3&fclid=fcf294aa-e352-11ec-ba30-8347a0045c35&u=a1aHR0cHM6Ly93ZWF0aGVyLmJvbS5nb3YuYXUv&ntb=1">Weather</a>
+        <a href="https://www.bing.com/ck/a?!&&p=41ff26f3e85adeb14d51ef445aa5e51c428e9346fa6d09e87219087a9ac875b7JmltdHM9MTY1NDI3MjQ3MSZpZ3VpZD1jMTE1OTIyOS0zZTQzLTQ4NDYtODAyNi0yOGVkZTI4M2Q0MzgmaW5zaWQ9NTE4NA&ptn=3&fclid=51bf2a28-e357-11ec-9ccb-c04edaa01796&u=a1aHR0cHM6Ly9tdXNpYy55b3V0dWJlLmNvbS8&ntb=1">Music</a>
+        <a href="https://www.bing.com/ck/a?!&&p=af834442981124540ec94ff6908eec9e6aaeff30ed419ac75124cb01d057f3c1JmltdHM9MTY1NDI3MDc5OCZpZ3VpZD05OGE0OWI0OS01YjIwLTQ5MDEtOTEyZC1lYmM0YWI0NWYwMjEmaW5zaWQ9NTE3OQ&ptn=3&fclid=6c69e5f4-e353-11ec-9231-fabd021cd01b&u=a1aHR0cHM6Ly93d3cuaG9yb3Njb3BlLmNvbS91cy9pbmRleC5hc3B4&ntb=1">Horoscope</a>
         <a href="#Trending">Trending</a>
         
         
